tests/iam/iampolicy/02-iampolicy-documentref.yaml
apiVersion: aws.kropath.run/v1alpha1
kind: IAMPolicy
metadata:
  name: document-ref-only
  namespace: iampolicy
spec:
  configRef: general-policy
  description: "Policy sourced from PolicyDocument"
  path: "/"
  nameOverride: ""
  deletionPolicy: retain
  documentJSON: ""
  documentRef: my-policy-doc
  tags: {}
  syncedLabels: {}
  syncedAnnotations: {}
