tests/iam/iampolicy/02-policydocument.yaml
apiVersion: aws.kropath.run/v1alpha1
kind: PolicyDocument
metadata:
  name: my-policy-doc
  namespace: iampolicy
  labels:
    aws.kropath.run/resource-name: my-policy-doc
spec:
  documentJSON: '{"Version":"2012-10-17","Statement":[{"Effect":"Allow","Action":"s3:PutObject","Resource":"*"}]}'
