tests/iam/iampolicy/03-invalid-documentjson-and-ref.yaml
apiVersion: aws.kropath.run/v1alpha1
kind: IAMPolicy
metadata:
  name: invalid-both
  namespace: iampolicy
spec:
  configRef: general-policy
  description: "Invalid policy"
  path: "/"
  nameOverride: ""
  deletionPolicy: retain
  documentJSON: '{"Version":"2012-10-17","Statement":[]}'
  documentRef: my-policy-doc
  tags: {}
  syncedLabels: {}
  syncedAnnotations: {}
