tests/iam/iampolicy/05-iampolicy-service-role.yaml
apiVersion: aws.kropath.run/v1alpha1
kind: IAMPolicy
metadata:
  name: service-role-policy
  namespace: iampolicy
spec:
  configRef: general-policy
  description: "Policy with service role path"
  path: "/service-role/"
  nameOverride: ""
  deletionPolicy: retain
  documentJSON: '{"Version":"2012-10-17","Statement":[{"Effect":"Allow","Action":"logs:CreateLogGroup","Resource":"*"}]}'
  documentRef: ""
  tags: {}
  syncedLabels: {}
  syncedAnnotations: {}
