tests/iam/iampolicy/06-iamconfig-iampolicy.yaml
apiVersion: aws.kropath.run/v1alpha1
kind: IAMConfig
metadata:
  name: general-policy
  namespace: iampolicy
spec:
  mandatory:
    permissionsBoundaryArn: ""
    blockIamUserAccessKeys: false
    maxSessionDurationSeconds: 0
    tags: {}
    syncedLabels: {}
    syncedAnnotations: {}
  defaults:
    permissionsBoundaryArn: ""
    blockIamUserAccessKeys: false
    maxSessionDurationSeconds: 3600
    tags: {}
    syncedLabels: {}
    syncedAnnotations: {}
