tests/iam/iampolicy/06-iampolicy-resource-name.yaml
apiVersion: aws.kropath.run/v1alpha1
kind: IAMPolicy
metadata:
  name: s3-read
  namespace: iampolicy
spec:
  configRef: general-policy
  description: "Policy for payments"
  path: "/"
  nameOverride: ""
  deletionPolicy: retain
  documentJSON: '{"Version":"2012-10-17","Statement":[{"Effect":"Allow","Action":"s3:GetObject","Resource":"*"}]}'
  documentRef: ""
  tags: {}
  syncedLabels: {}
  syncedAnnotations: {}
