tests/iam/iampolicy/08-iampolicy-synced-labels.yaml
apiVersion: aws.kropath.run/v1alpha1
kind: IAMPolicy
metadata:
  name: labeled-policy
  namespace: iampolicy
spec:
  configRef: general-policy
  description: "Labeled policy"
  path: "/"
  nameOverride: ""
  deletionPolicy: retain
  documentJSON: '{"Version":"2012-10-17","Statement":[{"Effect":"Allow","Action":"s3:GetObject","Resource":"*"}]}'
  documentRef: ""
  tags: {}
  syncedLabels:
    environment: production
  syncedAnnotations: {}
