tests/iam/iampolicy/09-iampolicy-status-arn.yaml
apiVersion: aws.kropath.run/v1alpha1
kind: IAMPolicy
metadata:
  name: arn-policy
  namespace: iampolicy
spec:
  configRef: general-policy
  description: "Policy exposing ARN"
  path: "/"
  nameOverride: ""
  deletionPolicy: retain
  documentJSON: '{"Version":"2012-10-17","Statement":[{"Effect":"Allow","Action":"s3:GetObject","Resource":"*"}]}'
  documentRef: ""
  tags: {}
  syncedLabels: {}
  syncedAnnotations: {}
