tests/iam/iampolicy/11-iampolicy-delete-policy.yaml
apiVersion: aws.kropath.run/v1alpha1
kind: IAMPolicy
metadata:
  name: delete-policy
  namespace: iampolicy
spec:
  configRef: general-policy
  description: "Delete policy"
  path: "/"
  nameOverride: ""
  deletionPolicy: delete
  documentJSON: '{"Version":"2012-10-17","Statement":[{"Effect":"Allow","Action":"s3:GetObject","Resource":"*"}]}'
  documentRef: ""
  tags: {}
  syncedLabels: {}
  syncedAnnotations: {}
