tests/iam/iampolicy/04-assert-updated-policy.yaml
apiVersion: iam.services.k8s.aws/v1alpha1
kind: Policy
metadata:
  name: versioned-policy
  namespace: iampolicy
spec:
  name: iampolicy-versioned-policy
  path: "/"
  description: "Versioned policy"
  policyDocument: '{"Version":"2012-10-17","Statement":[{"Effect":"Allow","Action":"s3:ListBucket","Resource":"*"}]}'
