tests/iam/iampolicy/05-assert-service-role-policy.yaml
apiVersion: iam.services.k8s.aws/v1alpha1
kind: Policy
metadata:
  name: service-role-policy
  namespace: iampolicy
spec:
  name: iampolicy-service-role-policy
  path: "/service-role/"
  description: "Policy with service role path"
