tests/iam/iampolicy/06-assert-resource-name.yaml
apiVersion: aws.kropath.run/v1alpha1
kind: IAMPolicy
metadata:
  name: s3-read
  namespace: iampolicy
status:
  resourceName: iampolicy-s3-read
