tests/iam/iampolicy/07-assert-tags.yaml
apiVersion: iam.services.k8s.aws/v1alpha1
kind: Policy
metadata:
  name: tagged-policy
  namespace: iampolicy
spec:
  name: iampolicy-tagged-policy
  path: "/"
  tags:
    - key: cost-centre
      value: platform
    - key: team
      value: payments
