tests/iam/iampolicy/08-assert-synced-labels.yaml
apiVersion: iam.services.k8s.aws/v1alpha1
kind: Policy
metadata:
  name: labeled-policy
  namespace: iampolicy
  labels:
    kropath.run/environment: production
spec:
  name: iampolicy-labeled-policy
  path: "/"
  tags:
    - key: environment
      value: production
