tests/iam/iampolicy/09-assert-status-arn.yaml
apiVersion: aws.kropath.run/v1alpha1
kind: IAMPolicy
metadata:
  name: arn-policy
  namespace: iampolicy
status:
  predictedArn: arn:aws:iam::123456789012:policy/iampolicy-arn-policy
