tests/iam/iampolicy/11-assert-delete-policy.yaml
apiVersion: iam.services.k8s.aws/v1alpha1
kind: Policy
metadata:
  name: delete-policy
  namespace: iampolicy
  annotations:
    services.k8s.aws/deletion-policy: delete
spec:
  name: iampolicy-delete-policy
  path: "/"
